repo-to-md/src/snapshots/review_to_md__apply__tests__apply_multiple_comments_same_file.snap
---
source: repo-to-md/src/apply.rs
expression: content
snapshot_kind: text
---
line 1
// <review>
// Comment on line 1
// </review>
line 2
line 3
// <review>
// Comment on line 3
// </review>
line 4
