repo-to-md/src/snapshots/review_to_md__apply__tests__apply_preserves_indentation.snap
---
source: repo-to-md/src/apply.rs
expression: content
snapshot_kind: text
---
fn main() {
    let x = 1;
    // <review>
    // Consider renaming
    // </review>
}
