repo-to-md/src/snapshots/review_to_md__apply__tests__format_comment_for_insertion_rust.snap
---
source: repo-to-md/src/apply.rs
expression: result
snapshot_kind: text
---
    // <review>
    // Fix this bug
    // </review>
