repo-to-md/src/snapshots/review_to_md__apply__tests__format_comment_multiline.snap
---
source: repo-to-md/src/apply.rs
expression: result
---
// <review user="reviewer">
// Line 1
// Line 2
// Line 3
// </review>
