repo-to-md/src/snapshots/review_to_md__apply__tests__print_apply_result_with_skipped.snap
---
source: repo-to-md/src/apply.rs
expression: output_str
---
Applied 5 comment(s) to 2 file(s)

Skipped 2 comment(s):
  - missing.rs: File not found (Some comment)
  - test.rs: Line 100 out of bounds (Another comment)
